# usd-plugin-samples

./: .gitattributes  .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  PackmanDeps.cmake  README.md  bootstrap.py  build.bat  build.sh  index.rst  repo.bat  repo.sh  repo.toml  setenvlinux  setenvwindows  setenvwindows.bat
kit-schema-extension/: CHANGES.md  README.md  build.bat  build.sh  kit_index.rst  package.toml  repo.toml
kit-schema-extension/src/omni.example.codeless.schema/: PACKAGE-INFO.yaml
kit-schema-extension/src/omni.example.schema/: PACKAGE-INFO.yaml
kit-schema-extension/tools/packman/: config.packman.xml  packman
resources/: metrics_assembler.usda  metrics_assembler_2.usda  scene.usda  warp_demo_mesh.usda  warp_demo_particles.usda  warp_demo_sim.usda
resources/ocean/: grid_128.usda  grid_128_smooth.usda  grid_256.usda  top.usda
resources/wgs84/: deutschebahn-rails.usda
scripts/: setup.py
src/hydra-plugins/: README.md
src/hydra-plugins/omniGeoSceneIndex/: api.h  computedDependentDataSource.cpp  computedDependentDataSource.h  computedPrimDataSource.cpp  computedPrimDataSource.h  geospatialDataSource.cpp  geospatialDataSource.h  geospatialSceneIndex.cpp  geospatialSceneIndex.h  geospatialSceneIndexPlugin.cpp  geospatialSceneIndexPlugin.h  localPositionAPIAdapter.cpp  localPositionAPIAdapter.h  localPositionDataSource.cpp  (+10 more)
src/usd-plugins/: README.md
tools/packman/: packman
usd-schema-extension/: CHANGES.md  README.md  build.bat  build.sh  package.toml  repo.toml  usd_index.rst
usd-schema-extension/tests/: conftest.py  test_schemas.py
(+97 files in other folders)
